@@ -1,0 +1,13 @@
+<run>
+  <precisionModel scale="1.0" offsetx="0.0" offsety="0.0"/>
+
+<case>
+  <desc>GC - overlapping polygons </desc>
+  <a>
+  MULTIPOLYGON(EMPTY,((0 0,1 0,1 1,0 1, 0 0)))
+	</a>
+<test><op name="getCentroid" arg1="A" >    POINT (0.5 0.5)   </op></test>
+</case>
+
+
+</run>
