@@ -5,6 +5,7 @@ Changes in 3.3.8
     - IsValidOp: throw proper error on nested shells (#608)
     - Fix header guards (#617, #618, #619)
     - WKTWriter::appendCoordinate optimisation
+    - Fix centroid computation for collections with empty components (#582)
 
 Changes in 3.3.7
 2013-01-22 
